// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the checkbox component correctly 1`] = `
<div
  className="comment"
>
  <label
    for={null}
  >
    Comment Label
  </label>
  <textarea
    autoFocus={null}
    cols="33"
    id={null}
    name={null}
    onChange={null}
    rows="5"
  />
</div>
`;

exports[`renders the checkbox component with optional props 1`] = `
<div
  className="comment"
>
  <label
    for="this-is-the-id"
  >
    Hello world
  </label>
  <textarea
    autoFocus={null}
    cols="33"
    id="this-is-the-id"
    name="this-is-the-id"
    onChange={[Function]}
    rows="5"
  />
  <p
    className={null}
  >
    Comment warning
  </p>
</div>
`;
